// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Anchor /> > should match snapshot with label, icon and to props 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <a
    class="reset_resetVariants__4z7xt3b reset_resetVariants_as_a__4z7xt315 reset_a__4z7xt32 sprinkles_alignItems_center_mobile__onxwjujq"
    data-od-component="anchor"
    href="https://www.autoguru.com.au"
  >
    <span
      class="reset_resetVariants__4z7xt3b reset_resetVariants_as_span__4z7xt3k  sprinkles_fontSize_4__onxwju21 sprinkles_fontWeight_bold__onxwju2i sprinkles_alignItems_center_mobile__onxwjujq sprinkles_display_inline-flex_mobile__onxwju7i sprinkles_gap_2_mobile__onxwjuge sprinkles_color_link__onxwju60"
    >
      <span
        class="reset_resetVariants__4z7xt3b reset_resetVariants_as_span__4z7xt3k  sprinkles_display_block_mobile__onxwju6u Icon_makeResponsiveStyle_key_bp__1gy3ire0"
      >
        <svg
          aria-hidden="true"
          class="reset_resetVariants__4z7xt3b reset_resetVariants_as_div__4z7xt3c reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6u sprinkles_width_full_mobile__onxwjufa sprinkles_height_full_mobile__onxwjudq"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </span>
      <span>
        Hello World!
      </span>
    </span>
  </a>
</div>
`;

exports[`<Anchor /> > should match snapshot without label 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <a
    class="reset_resetVariants__4z7xt3b reset_resetVariants_as_a__4z7xt315 reset_a__4z7xt32 sprinkles_alignItems_center_mobile__onxwjujq"
    data-od-component="anchor"
  >
    <span
      class="reset_resetVariants__4z7xt3b reset_resetVariants_as_span__4z7xt3k  sprinkles_fontSize_4__onxwju21 sprinkles_fontWeight_bold__onxwju2i sprinkles_alignItems_center_mobile__onxwjujq sprinkles_display_inline-flex_mobile__onxwju7i sprinkles_gap_2_mobile__onxwjuge sprinkles_color_link__onxwju60"
    >
      <span />
    </span>
  </a>
</div>
`;

exports[`<Anchor /> > when custom component > should match snapshot with label, icon custom component 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <a
    class="reset_resetVariants__4z7xt3b reset_resetVariants_as_a__4z7xt315 reset_a__4z7xt32 sprinkles_alignItems_center_mobile__onxwjujq"
    data-od-component="anchor"
    is="[object Object]"
  >
    <span
      class="reset_resetVariants__4z7xt3b reset_resetVariants_as_span__4z7xt3k  sprinkles_fontSize_4__onxwju21 sprinkles_fontWeight_bold__onxwju2i sprinkles_alignItems_center_mobile__onxwjujq sprinkles_display_inline-flex_mobile__onxwju7i sprinkles_gap_2_mobile__onxwjuge sprinkles_color_link__onxwju60"
    >
      <span
        class="reset_resetVariants__4z7xt3b reset_resetVariants_as_span__4z7xt3k  sprinkles_display_block_mobile__onxwju6u Icon_makeResponsiveStyle_key_bp__1gy3ire0"
      >
        <svg
          aria-hidden="true"
          class="reset_resetVariants__4z7xt3b reset_resetVariants_as_div__4z7xt3c reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6u sprinkles_width_full_mobile__onxwjufa sprinkles_height_full_mobile__onxwjudq"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </span>
      <span>
        Hello World!
      </span>
    </span>
  </a>
</div>
`;
